--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -152,6 +152,7 @@ android {
 dependencies {
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
+    implementation project(':react-native-vector-icons')
 
 
     // The version of react-native is set by the React Native Gradle Plugin
