--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.71.5",
     "react-native-curved-bottom-bar": "^3.2.4",
+    "react-native-date-picker": "^4.2.11",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
     "react-native-paper": "^5.5.2",
