--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.5",
     "react-native-curved-bottom-bar": "^3.2.4",
