--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-native-redux": "^1.0.12",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-shadow-2": "^7.0.7",
     "react-native-svg": "^13.9.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
