--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.5",
+    "react-native-animated-pagination-dot": "^0.4.0",
+    "react-native-animated-pagination-dots": "^0.1.73",
     "react-native-curved-bottom-bar": "^3.2.4",
     "react-native-date-picker": "^4.2.11",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.5.2",
     "react-native-ratings": "^8.1.0",
     "react-native-redux": "^1.0.12",
