--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-date-picker": "^4.2.11",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-image-picker": "^5.3.1",
     "react-native-paper": "^5.5.2",
     "react-native-ratings": "^8.1.0",
     "react-native-redux": "^1.0.12",
