--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.71.5",
     "react-native-curved-bottom-bar": "^3.2.4",
     "react-native-date-picker": "^4.2.11",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-fontawesome": "^7.0.0",
     "react-native-image-picker": "^5.3.1",
