--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-firebase/app": "^17.4.1",
     "@react-native-firebase/firestore": "^17.4.1",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "moment": "^2.29.4",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.5",
     "react-native-animated-pagination-dot": "^0.4.0",
     "react-native-animated-pagination-dots": "^0.1.73",
+    "react-native-currency-input": "^1.1.0",
     "react-native-curved-bottom-bar": "^3.2.4",
     "react-native-date-picker": "^4.2.11",
     "react-native-elements": "^3.4.3",
@@ -35,6 +40,7 @@
     "react-native-shadow-2": "^7.0.7",
     "react-native-svg": "^13.9.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
