--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,6 +154,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation project(':react-native-vector-icons')
 
+    // Add the dependency for the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
