--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@firebase/app": "^0.9.11",
     "@react-native-async-storage/async-storage": "^1.18.1",
-    "@react-native-firebase/app": "^17.4.1",
-    "@react-native-firebase/firestore": "^17.4.1",
+    "@react-native-firebase/app": "^17.5.0",
+    "@react-native-firebase/auth": "^17.5.0",
+    "@react-native-firebase/firestore": "^17.5.0",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.4.0",
+    "firebase": "^9.22.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.5",
