--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-firebase/app": "^17.4.1",
     "@react-native-firebase/firestore": "^17.4.1",
