--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/auth": "^17.5.0",
     "@react-native-firebase/firestore": "^17.5.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
@@ -31,9 +32,11 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
+    "react-native-fbsdk-next": "^11.2.1",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^5.3.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.5.2",
     "react-native-ratings": "^8.1.0",
     "react-native-redux": "^1.0.12",
@@ -41,7 +44,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-virtualized-view": "^1.0.0"
+    "react-native-virtualized-view": "^1.0.0",
+    "react-native-webview": "^13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
