--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-element-dropdown": "^2.9.0",
     "react-native-elements": "^3.4.3",
     "react-native-fbsdk-next": "^11.2.1",
+    "react-native-flash-message": "^0.4.1",
     "react-native-fontawesome": "^7.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^5.3.1",
