--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.5",
+    "react-native-calendars": "^1.1298.0",
     "react-native-currency-input": "^1.1.0",
     "react-native-curved-bottom-bar": "^3.2.4",
     "react-native-date-picker": "^4.2.11",
