--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "date-fns": "^2.30.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-charts-wrapper": "^0.5.11",
     "react-native-curved-bottom-bar": "^3.2.4",
     "react-native-date-picker": "^4.2.11",
     "react-native-element-dropdown": "^2.9.0",
@@ -29,6 +32,7 @@
     "react-native-fontawesome": "^7.0.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-paper": "^5.5.2",
+    "react-native-pie-chart": "^3.0.1",
     "react-native-ratings": "^8.1.0",
     "react-native-redux": "^1.0.12",
     "react-native-safe-area-context": "^4.5.0",
