--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@firebase/app": "^0.9.11",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-firebase/app": "^17.5.0",
     "@react-native-firebase/auth": "^17.5.0",
     "@react-native-firebase/firestore": "^17.5.0",
@@ -22,15 +23,15 @@
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "date-fns": "^2.30.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "firebase": "^9.22.1",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.5",
+    "react-native-calendars": "^1.1298.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.11",
-    "react-native-calendars": "^1.1298.0",
     "react-native-currency-input": "^1.1.0",
     "react-native-curved-bottom-bar": "^3.2.4",
     "react-native-date-picker": "^4.2.11",
@@ -43,6 +44,7 @@
     "react-native-image-picker": "^5.3.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^5.5.2",
+    "react-native-pie": "^1.1.2",
     "react-native-pie-chart": "^3.0.1",
     "react-native-ratings": "^8.1.0",
     "react-native-redux": "^1.0.12",
