--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -154,7 +154,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.3.0')
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-fbsdk-next')
-    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     // Add the dependency for the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics-ktx'
